# pyshn

./: .gitignore  LICENSE  README.rst  requirements.txt  setup.cfg
src/pyshn/: cli.py  cnpj.py  cpf.py
tests/: test_cli.py  test_cnpj.py  test_cpf.py
