[metadata]
name = pyshn
version = attr: pyshn.__version__
url = https://github.com/shneiderfku/pyshn/
project_urls = 
    Issue Tracker = https://github.com/shneiderfku/pyshn/issues/
    Source Code = https://github.com/shneiderfku/pyshn/
    Twitter = https://twitter.com/shneiderfku/
license = MIT
license_files = LICENSE
author = Rafael Ribeiro
author_email = shneiderfku@outlook.com
description = My python swiss army knife
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyshn = pyshn.cli:main

[tool:pytest]
testpaths = tests
filterwarnings = 
    error